--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,6 +6,7 @@
     "express": "^4.19.2",
     "express-oauth-jwt": "^2.0.2",
     "express-rate-limit": "^7.2.0",
-    "mssql": "^11.0.1"
+    "mssql": "^11.0.1",
+    "mysql2": "^3.11.3"
   }
 }
